--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -63,6 +63,35 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*, 
+*::before, 
+*::after {
   box-sizing: inherit;
+}
+
+
+* {
+	font-family: 
+		-apple-system, 
+		BlinkMacSystemFont, 
+		"Segoe UI", 
+		Roboto, 
+		"Helvetica Neue", 
+		Arial, 
+		sans-serif, 
+		"Apple Color Emoji", 
+		"Segoe UI Emoji", 
+		"Segoe UI Symbol";
+}
+
+*:not(title) {
+	display: flex;
+	flex-direction: column;
+	margin: 0 auto;
+	justify-content: center; 
+	align-content: center;
+	align-self: center; 
+	justify-items: center; 
+	vertical-align: middle; 
+	text-align: center;  
 }
