update to style
body and html height/width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ h1,h2,h3,h4,h5,h6,div,section,header {
     font-size: 21px;
 }
 
+html, body {
+    height: 100%;
+    width: 100%;   
+}
+
 
 body {
     background-image: url('../images/backgrounds/cheap_diagonal_fabric.png');
